--- a/test_following.html
+++ b/test_following.html
@@ -153,8 +153,7 @@
               style="font-size: 10.7px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
             <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
             <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
-            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭하기!
-              &nbsp;&nbsp;&nbsp;</span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭!</span>
           </div>
         </div>
 
@@ -183,7 +182,7 @@
 
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
 
-        &nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;
                font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;
                color:#2563eb;font-weight:800;">
@@ -199,7 +198,7 @@
         를 눌러주세요)
       </div>
 
-      <div style="
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="
   font-size:13px;
   background:#eff6ff;
   border:1px solid #bfdbfe;
@@ -209,7 +208,8 @@
   color:#1e40af;
   display:inline-flex;
   align-items:center;
-  margin-left:8px;
+  margin-left:8px; justify-content:center;
+  
   gap:0px;
 ">
         <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
@@ -248,7 +248,8 @@
           <span style="font-weight:300;color:black;font-size:13px">
             후,</span>
           <br>
-          <span style="font-size:13px; font-weight: 900;color:black;;">&nbsp;&nbsp;복사된</span>
+          <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
 
 
           <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span
@@ -266,7 +267,7 @@
 
 
 
-        <div style="
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="
   font-size:13px;
   background:#eff6ff;
   border:1px solid #bfdbfe;
@@ -279,7 +280,8 @@
   gap:4px;
 ">
           <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-          <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">미션 질문 단계 건너뛰지 않고 수행하기</span>
+          <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">미션 질문 단계 건너뛰고 수행하면 <span
+              style="font-weight: bold"> 정답오류</span>
 
 
         </div>
@@ -292,7 +294,7 @@
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;
                     border-radius:8px;display:flex;align-items:center;
                     justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">#</div>
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+    <div class="card" style="background:rgb(240, 243, 226);border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
       <div style="flex:1;">
         <div style="font-size:16px;font-weight:800;margin-bottom:6px;">
           미션질문 참고 이미지
@@ -308,7 +310,7 @@
           <!-- 왼쪽 : 큰 이미지 -->
           <div>
             <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-              플레이스 리뷰 탭
+              [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순 정렬]
             </div>
             <div style="height:320px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
               display:flex;align-items:center;justify-content:center;background:#fff;">
@@ -322,7 +324,7 @@
 
             <div>
               <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-                플레이스 사진 탭
+                [플레이스 사진 탭]
               </div>
               <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
                   display:flex;align-items:center;justify-content:center;background:#fff;">
