--- a/test_following.html
+++ b/test_following.html
@@ -314,7 +314,7 @@
             </div>
             <div style="height:320px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
               display:flex;align-items:center;justify-content:center;background:#fff;">
-              <img src="https://raw.githubusercontent.com/unembabo/images/main/review.png"
+              <img src="https://raw.githubusercontent.com/unembabo/images/main/review2.png"
                 style="width:100%;height:100%;object-fit:cover;object-position:top left;">
             </div>
           </div>
@@ -324,7 +324,7 @@
 
             <div>
               <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-                [플레이스 사진 탭]
+                [사진탭- 내부버튼]
               </div>
               <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
                   display:flex;align-items:center;justify-content:center;background:#fff;">
@@ -335,7 +335,7 @@
 
             <div>
               <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-                플레이스 지도 탭
+                [길찾기- 추천거리]
               </div>
               <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
                   display:flex;align-items:center;justify-content:center;background:#fff;">
@@ -350,21 +350,11 @@
         <!-- 아래 추가 2열 -->
         <div class="mission-grid" style="display:grid;grid-template-columns:repeat(2, 1fr);gap:12px;margin-top:12px;">
 
-          <div>
-            <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-              플레이스 주변 탭
-            </div>
-            <div style="height:150px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
-                display:flex;align-items:center;justify-content:center;background:#fff;">
-              <img src="https://raw.githubusercontent.com/unembabo/images/main/narrow.png"
-                style="max-width:100%;max-height:100%;object-fit:contain;">
-            </div>
-          </div>
 
 
           <div>
             <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-              공유 버튼을 눌러서 URL 복사
+              [공유하기- URL복사버튼]
             </div>
             <div style="height:150px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
                 display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;background:#fff;">
