--- a/test_following.html
+++ b/test_following.html
@@ -308,16 +308,25 @@
         <div class="mission-grid" style="display:grid;grid-template-columns:1fr 1fr;gap:12px;">
 
           <!-- 왼쪽 : 큰 이미지 -->
-          <div>
-            <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-              [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순 정렬]
-            </div>
-            <div style="height:320px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
-              display:flex;align-items:center;justify-content:center;background:#fff;">
-              <img src="https://raw.githubusercontent.com/unembabo/images/main/review2.png"
-                style="width:100%;height:100%;object-fit:cover;object-position:top left;">
-            </div>
-          </div>
+<div>
+  <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+    [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순 정렬]
+  </div>
+
+<div style="
+  border-radius:8px;
+  overflow:hidden;
+  border:1px solid #e5e7eb;
+  line-height:0;
+">
+  <img src="https://raw.githubusercontent.com/unembabo/images/main/review_teamleader.png"
+    style="
+      width:50%;
+      height:auto;
+      display:block;
+    ">
+</div>
+</div>
 
           <!-- 오른쪽 : 작은 이미지 2개 -->
           <div style="display:flex;flex-direction:column;gap:12px;">
@@ -328,25 +337,10 @@
               </div>
               <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
                   display:flex;align-items:center;justify-content:center;background:#fff;">
-                <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture2.png?v=2"
+                <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture4.png"
                   style="max-width:100%;max-height:100%;object-fit:contain;">
               </div>
             </div>
-
-            <div>
-              <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
-                [길찾기- 추천거리]
-              </div>
-              <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
-                  display:flex;align-items:center;justify-content:center;background:#fff;">
-                <img src="https://raw.githubusercontent.com/unembabo/images/main/map.png"
-                  style="max-width:100%;max-height:100%;object-fit:contain;">
-              </div>
-            </div>
-
-          </div>
-        </div>
-
         <!-- 아래 추가 2열 -->
         <div class="mission-grid" style="display:grid;grid-template-columns:repeat(2, 1fr);gap:12px;margin-top:12px;">
 
@@ -358,14 +352,29 @@
             </div>
             <div style="height:150px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
                 display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;background:#fff;">
-              <img src="https://raw.githubusercontent.com/unembabo/images/main/share.png"
-                style="width:60px;height:auto;object-fit:contain;">
-              <img src="https://raw.githubusercontent.com/unembabo/images/main/url_copy.png"
+              <img src="https://raw.githubusercontent.com/unembabo/images/main/source_share.png"
                 style="width:60px;height:auto;object-fit:contain;">
             </div>
           </div>
 
         </div>
+            <div>
+              <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:4px;">
+                [길찾기- 추천거리]
+              </div>
+              <div style="height:124px;border-radius:8px;overflow:hidden;border:1px solid #e5e7eb;
+                  display:flex;align-items:center;justify-content:center;background:#fff;">
+                <img src="https://raw.githubusercontent.com/unembabo/images/main/walking.png"
+                  style="max-width:100%;max-height:100%;object-fit:contain;">
+                <img src="https://raw.githubusercontent.com/unembabo/images/main/km.png"
+                  style="max-width:100%;max-height:100%;object-fit:contain;">                  
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
 
 
 
