--- a/test_following.html
+++ b/test_following.html
@@ -273,14 +273,14 @@
         border:1px solid #e5e7eb;
         background:#fff;
       ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture4.png"
-          style="
-            width:100%;
-            height:100%;
-            object-fit:contain;
-            object-position:center;
-            display:block;
-          ">
+    <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture5.png"
+      style="
+        width:100%;
+        height:100%;
+        object-fit:cover;          /* ✅ 위아래 공백 제거(크롭) */
+        object-position:center;    /* 필요하면 'center 40%' 이런식으로 미세조정 */
+        display:block;
+      ">
       </div>
     </div>
 
@@ -299,14 +299,14 @@
         align-items:center;
         justify-content:center;
       ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/source_share.png"
-          style="
-            width:100%;
-            height:100%;
-            object-fit:contain;
-            object-position:center;
-            display:block;
-          ">
+    <img src="https://raw.githubusercontent.com/unembabo/images/main/source_share.png"
+      style="
+        width:100%;
+        height:100%;
+        object-fit:cover;          /* ✅ 여백 제거하고 꽉 채움 */
+        object-position:center;
+        display:block;
+      ">
       </div>
     </div>
 
