--- a/test1.html
+++ b/test1.html
@@ -1,106 +1,320 @@
-<!-- 미션설명 · 심플/가독성/아이콘/이미지 포함 · 1~3 묶음 + 4,5 동급 카드 -->
-<div style='display: flex; flex-direction: column; gap: 12px; margin:0 auto; font-family:Arial,system-ui,-apple-system,Segoe UI,Roboto,sans-serif; padding:10px; color:#0f172a;'>
+<!DOCTYPE html>
+<html lang="ko">
 
-  <!-- 알림 배지 (업데이트 문구 제거, 메시지 유지) -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>플레이스 찾기 미션 안내</title>
 
-    
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Square:wght@400;700;800&display=swap" rel="stylesheet">
 
-  <div style='display:flex;align-items:center;gap:10px;padding:12px 14px;border:1px solid #e5e7eb;border-radius:12px;background:#f8fafc;margin-bottom:12px;'>
-    <div style='width:30px;height:30px;display:flex;align-items:center;justify-content:center;border-radius:50%;background:#e2e8f0;font-size:16px;'>⚙️</div>
-    <span style='font-size:16px;font-weight:700;'>미션난이도를 빠르고 쉽게 조정했어요!</span>
-  </div>
+  <style>
+    /* 기본: 모든 이미지 넘침 방지
+    img {
+      max-width: 100%;
+      height: auto;
+    }
 
-  <div style='padding:15px; align-content: center;'>
-      <img src='https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png'
-           alt='검색 예시'
-           style='width:100%;height:auto;border-radius:14px;display:flex; margin: auto;'>
-    </div>
+    /* 모바일에서만 레이아웃/타이포 안정화 */
+    @media (max-width: 520px) {
+      body {
+        padding: 12px !important;
+      }
 
-  <!-- 타이틀 -->
-  <div style='display:flex;align-items:center;gap:12px;margin-bottom:12px;'>
-    <div style='width:36px;height:36px;flex-shrink:0;display:flex;align-items:center;justify-content:center;border-radius:50%;background:#eef2ff;font-size:30px;'>💰</div>
-    <span style='font-size:22px;font-weight:800;line-height:1.2;word-break:keep-all;'>플레이스 찾기 미션 안내</span>
-  </div>
+      .container {
+        gap: 14px !important;
+      }
 
+      /* 타이틀 줄바꿈 자연스럽게 */
+      .titleRow {
+        align-items: flex-start !important;
+      }
 
+      .titleText {
+        font-size: 18px !important;
+        line-height: 1.25 !important;
+      }
 
-  <!-- 1~3 묶음 (한 카드) -->
-  <div style='display:flex;flex-direction:column;gap:12px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:black;color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;font-size:13px;'>1</div>
-      <div style='font-size:16px;line-height:1.6;'>
-        <span style='font-size:12px;font-weight:700;color:black;margin-left:6px;'>&lt;진짜 필수&gt;</span>
-        <span style='font-weight:900;color:rgb(255, 0, 0);'>키워드 복사</span>
-        <span style='font-size:11px;color:black;'>버튼클릭</span>
-        
+      /* STEP 카드 패딩 살짝 줄이기 */
+      .card {
+        padding: 14px 10px !important;
+      }
+
+      /* STEP 1 이미지 간격 모바일 조정 */
+      .step1-images {
+        gap: 3px !important;
+      }
+
+      /* 미션질문 이미지 그리드 1열로 */
+      .mission-grid {
+        grid-template-columns: 1fr !important;
+      }
+
+      /* 2열 비교/카드 → 1열로 */
+      .twoCol {
+        flex-direction: column !important;
+      }
+
+      .twoCol>div {
+        width: 100% !important;
+      }
+
+      /* 이미지 프레임 높이 모바일에서 살짝 줄이기(안 깨짐) */
+      .imgFrame {
+        height: 160px !important;
+      }
+    }
+
+    .targetText {
+      font-family: "Noto Sans KR", sans-serif;
+      font-size: 17px;
+      line-height: 22px;
+      font-weight: bolder;
+      letter-spacing: -0.3px;
+      color: rgb(0, 104, 195);
+      cursor: pointer;
+      display: inline;
+    }
+
+    */
+  </style>
+</head>
+
+<body style="margin:0;font-family:'Nanum Square', sans-serif;background:rgb(229, 243, 226);color:rgb(15, 23, 42);padding:20px;overflow-x:hidden;">
+  <div class="container" style="max-width:720px;margin:0 auto;display:flex;flex-direction:column;gap:20px;">
+
+    <!-- 알림 -->
+    <div style="display:flex;align-items:center;gap:10px;padding:14px 16px;background:#ffffff;border-radius:12px;border:1px solid #e5e7eb;">
+      <div style="width:32px;height:32px;border-radius:50%;background:#eef2ff;display:flex;align-items:center;justify-content:center;">
+        ⚙️
+      </div>
+      <div style="font-size:15px;font-weight:700;color:#1e293b;">
+        미션이 더 쉽고 빠르게 바뀌었어요!
       </div>
     </div>
 
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:black;color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;font-size:13px;'>2</div>
-      <div style='font-size:16px;line-height:1.6;'>
-        <span style='font-weight:900;color:rgb(255, 0, 0);'>미션 시작하기</span>
-        <span style='font-size:11px;color:black;'>버튼클릭</span>
+    <img src="https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_jviz61jviz61jviz.png"
+      alt="검색 예시"
+      style="width:100%;height:auto;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.08);display:block;">
+
+    <!-- 타이틀 -->
+    <div class="titleRow" style="display:flex;align-items:center;gap:12px;">
+      <div style="width:40px;height:40px;border-radius:50%;background:linear-gradient(135deg,#6366f1,#8b5cf6);display:flex;align-items:center;justify-content:center;font-size:22px;color:#fff;">
+        💰
+      </div>
+      <div class="titleText" style="font-size:22px;font-weight:800;color:#1e293b;">
+        플레이스 찾기 미션 방법
       </div>
     </div>
 
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:black;color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:600;font-size:13px;'>3</div>
-      <div style='font-size:16px;line-height:1.6;'>
-        <span style='font-weight:900;color:black;'>붙여넣기</span>
-        <span style='font-size:11px;color:black;'>후 검색</span>
+    <!-- STEP 1 -->
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">1</div>
+
+    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+      <div style="display:flex;flex-direction:column;gap:0px;">
+        <div class="step1-images" style="display:flex; margin-bottom:6px; align-items:center;gap:1px;flex-wrap:nowrap;min-width:0;">
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/keywordpm5.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <span style="font-size:9px;flex:0 0 auto; margin-left:-2px; color:rgba(0,0,0);">클릭 후,</span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/missionStart22.png" style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+          <span style="font-size:9px;flex:0 0 auto; margin-left:-2px;">클릭 후,</span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/naver_logo.png" style="flex:0.65 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+        </div>
+
+        <div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:4.5px 8px;margin-bottom:4px;color:#1e40af;display: inline-block; align-self:flex-start;">
+          <div style="font-size:13px;color:#475569;">
+            <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span><span style="font-size: 10.7px; font-weight:900;color:rgb(255, 115, 22);"> 플레이스명 </span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">직접 입력하면</span>
+            <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류,</span>
+            <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);"> 반드시 키워드 복사 버튼 클릭!</span>
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- 작게 한 줄 안내 + 이미지로 루즈함 방지 -->
-    <div style='border:1px dashed #e5e7eb;border-radius:10px;padding:15px;background:#f9fafb;'>
-      <img src='https://cashplan-r2.uk/save-mission-copy.svg'
-           alt='검색 예시'
-           style='width:100%;height:auto;border-radius:14px;display:inline-flex;'>
+    <!-- STEP 2 -->
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">2</div>
+    <div class="card" style="background:#ffffff;border-radius:12px;padding:10px 10px;border:1px solid #e5e7eb;">
+      <div style="display:flex;gap:12px;align-items:center;margin-bottom:2.5px;">
+        <div>
+          <span class="targetText">엠치과의원 신암점</span>
+          <span style="font-size:10px; font-weight:500;color:#000000;">플레이스 클릭</span>
+        </div>
+      </div>
+
+      <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
+        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
+        <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
+          <img src="./newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
+        </span>
+        를 눌러주세요)
+      </div>
+
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin:0 0 4px auto;color:#1e40af;display:inline-flex;align-items:center;margin-left:8px; justify-content:center;gap:0px;">
+        <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/ad-teamreader.png" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
+      </div>
+    </div>
+
+    <!-- STEP 3 -->
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">3</div>
+    <div class="card" style="background:#ffffff;border-radius:12px;padding:16px 18px;border:1px solid #e5e7eb;">
+      <div>
+        <div style="font-size:15px;font-weight:500;line-height:1.3; margin-bottom: 15px;">
+          <span style="font-weight:300;color:black;font-size:13px"> 아래 </span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/accent-teamreader.png" style="flex:3 1 0;height:28px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:6.5px;"><span class="text-base font-semibold leading-[18px] text-slate-900">미션 질문</span>
+          <span style="font-weight:300;color:black;font-size:13px"> 에 따라 </span><span style="font-weight:300;color:black; font-weight:bold; font-size:13px">순서대로 클릭</span>
+          <span style="font-weight:300;color:black;font-size:13px"> 후,</span>
+          <br>
+          <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
+          <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span style="font-weight:300;color:black;font-size:12px; white-space:nowrap;">를</span>
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/answer_submit.png" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
+        </div>
+
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin-bottom:4px;color:#1e40af;display:inline-flex;align-items:center;gap:4px;">
+          <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
+          <span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">미션 질문 단계 건너뛰고 수행하면 <span style="font-weight: bold"> 정답오류</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- 미션질문 참고 이미지 -->
+    <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">#</div>
+
+
+<div class="card" style="  
+  background:rgb(240, 243, 226);
+  border-radius:12px;
+  padding:16px;
+  border:1px solid #e5e7eb;
+">
+
+  <div style="font-size:16px;font-weight:800;margin-bottom:4px;">
+    미션질문 참고 이미지
   </div>
 
-  
+  <div style="font-size:13px;color:#64748b;margin-bottom:14px;">
+    버튼 위치를 확인할 때 참고해 주세요
+  </div>
+
+  <!-- GRID -->
+  <div style="
+    display:grid;
+    grid-template-columns:1fr 1fr;
+    gap:14px;
+  ">
+
+    <!-- 리뷰탭 -->
+<div>
+  <div style="
+    font-size:11px;
+    font-weight:700;
+    color:#334155;
+    margin-bottom:6px;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    line-height:1.2;
+  ">
+    [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순]
+  </div>
+
+  <div style="
+    border-radius:10px;
+    overflow:hidden;
+    border:1px solid #e5e7eb;
+    background:#fff;
+  ">
+    <img src="https://raw.githubusercontent.com/unembabo/images/main/review_teamleader.png"
+      style="
+        width:100%;
+        height:auto;               /* ✅ 이미지 비율대로 높이 자동 */
+        display:block;
+      ">
+  </div>
 </div>
-<!-- 4번 카드 -->
-  <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:black;color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>4</div>
-      <div style='font-size:16px;font-weight:500;line-height:1.3;'>
-        <span style='font-weight:800;color:rgb(255, 0, 0);'>엠치과의원 신암점</span>
-        <span style='font-weight:800;color:black;'>플레이스</span>
-        <span style='font-weight:400;color:black;font-size:12px'>를 클릭</span>
-      </div>
-    </div>
-    <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
-      노출 위치: <span style='font-weight:800;color:black;'>아래 참고</span>
-    </div>
-  </div>
 
-  <!-- 5번 카드 -->
-  <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;background:#ffffff;'>
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:black;color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>5</div>
-      <div style='font-size:15px;font-weight:500;line-height:1.3;'>
-        <span style='font-weight:300;color:black;font-size:13px'>아래 </span>
-        <span style='font-weight:900;color:rgb(255, 0, 0);'>미션질문</span>
-        <span style='font-weight:300;color:black;font-size:13px'> 수행 후,</span>
-        <span style='font-weight:900;color:rgb(255, 0, 0);'>플레이스 최종링크 또는 복사된 URL</span> 
-        <span style='font-weight:300;color:black;font-size:12px'>을</span>
-        <span style='font-weight:900;color:black;font-size:13px'>정답입력</span>
-      </div>
-    </div>
-  </div>
 
-  <div style='display:flex;flex-direction:column;gap:10px;border:1px solid #e5e7eb;border-radius:16px;padding:18px;margin-bottom:16px;background:#ffffff;'>
-    <div style='display:flex;align-items:center;gap:10px;'>
-      <div style='width:26px;height:26px;border-radius:6px;background:rgb(255, 115, 22);color:#fff;display:flex;align-items:center;justify-content:center;line-height:26px;transform:translateY(-1px);font-weight:500;'>※</div>
-      <div style='font-size:16px;font-weight:500;line-height:1.3;'>
-        <span style='font-weight:800;color:rgb(255, 115, 22);'>주의사항</span>
+    <!-- 공유하기 -->
+    <div>
+      <div style="
+        font-size:12px;
+        font-weight:700;
+        color:#334155;
+        margin-bottom:6px;
+        margin-top:2px;
+      ">
+        [공유하기- URL 복사 버튼]
+      </div>
+
+      <div style="
+        border-radius:10px;
+        overflow:hidden;
+        border:1px solid #e5e7eb;
+        background:rgb(240, 243, 226);
+      ">
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture5.png"
+          style="
+            width:100%;
+            height:auto;
+            display:block;
+          ">
       </div>
     </div>
-    <div style='font-size:14px;line-height:1.6;color:#374151;background:#f9fafb;border-radius:8px;padding:10px;'>
-      1. <span style='font-weight:800;color:rgb(255, 115, 22);'>상호 검색 시 정답오류</span>, 키워드 복사하기! <br>
-      2. 광고 플레이스 클릭 시  <span style='font-weight:800;color:rgb(255, 115, 22);'>정답오류</span><br>
-      3. <span style='font-weight:800;color:rgb(255, 115, 22);'>미션 질문 단계 건너뛰지 않고 </span>수행하기<br>
-    </div>
+
+    <!-- 길찾기 (✅ 한 줄 전체폭 / ✅ 100% 전체 보이기) -->
+<!-- 길찾기 (한 줄 전체폭 / div가 이미지에 맞게) -->
+<div style="grid-column:1 / -1;">
+  <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:6px;">
+    [길찾기- 추천거리]
   </div>
+  <div style="
+    border-radius:10px;
+    overflow:hidden;
+    border:1px solid #e5e7eb;
+    background:#fff;
+  ">
+    <img src="https://raw.githubusercontent.com/unembabo/images/main/cutting22.png"
+      style="
+        width:100%;
+        height:auto;               /* ✅ 이미지 비율대로 높이 자동 */
+        display:block;
+      ">
+  </div>
+</div>
+
+    <!-- 사진탭 (✅ 다음 행 / ✅ 100% 전체 보이기) -->
+ <!-- <div style="grid-column:1 / -1;">
+  <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:6px;">
+    [사진탭- 내부버튼]
+  </div>
+  <div style="
+    border-radius:10px;
+    overflow:hidden;
+    border:1px solid #e5e7eb;
+    background:#fff;
+  ">
+    <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture5.png"
+      style="
+        width:100%;
+        height:auto;               /* ✅ 이미지 비율대로 높이 자동 */
+        display:block;
+      ">
+  </div>
+</div> -->
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+  </div>
+</body>
+
+</html>
