--- a/test_following.html
+++ b/test_following.html
@@ -144,9 +144,9 @@
       </div>
 
       <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
-        &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
         <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
-          <img src="./newMoreView.png?v=2" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/newMoreView.png?v=2" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
         </span>
         를 눌러주세요)
       </div>
@@ -167,7 +167,7 @@
           <span style="font-weight:300;color:black;font-size:13px"> 에 따라 </span><span style="font-weight:300;color:black; font-weight:bold; font-size:13px">순서대로 클릭</span>
           <span style="font-weight:300;color:black;font-size:13px"> 후,</span>
           <br>
-          <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
+          <span style="font-size:13px; font-weight: 425;color:black;;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;복사된</span>
           <span style="font-weight:900;font-size:13px;color:rgb(255,0,0);">최종 링크</span><span style="font-weight:300;color:black;font-size:12px; white-space:nowrap;">를</span>
           <img src="https://raw.githubusercontent.com/unembabo/images/main/answer_submit.png?v=2" style="flex:3 1 0;height:26px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:8.5px;">
         </div>
@@ -182,97 +182,68 @@
     <!-- 미션질문 참고 이미지 -->
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">#</div>
 
-
-<div class="card" style="  
-  background:rgb(240, 243, 226);
+<div class="card" style="
+  background: rgb(226, 225, 225);
   border-radius:12px;
   padding:16px;
   border:1px solid #e5e7eb;
 ">
 
-  <div style="font-size:16px;font-weight:800;margin-bottom:4px;">
+  <!-- 카드 타이틀 -->
+  <div style="font-size:16px;font-weight:800;margin-bottom:4px;color:#1f2937;">
     미션질문 참고 이미지
   </div>
 
-  <div style="font-size:13px;color:#64748b;margin-bottom:14px;">
+  <!-- 카드 설명 -->
+  <div style="font-size:13px;color:#374151;margin-bottom:14px;">
     버튼 위치를 확인할 때 참고해 주세요
   </div>
 
+  <div style="
+    display:grid;
+    grid-template-columns: 0.9fr 1fr;
+    gap:14px;
+    align-items:start;
+  ">
 
-<!-- GRID -->
-<div style="
-  display:grid;
-  grid-template-columns: 0.5fr 1fr;  /* ✅ 좌측 더 축소, 우측 더 확대 */
-  gap:14px;
-  align-items:start;
-">
-
-  <!-- LEFT -->
-  <div>
+    <!-- TITLE (FULL WIDTH) -->
     <div style="
-      font-size:11px;
-      font-weight:700;
-      color:#334155;
-      margin-bottom:6px;
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
-      line-height:1.2;
+      grid-column: 1 / -1;
+      font-size:10.5px;
+      font-weight:800;
+      color:#1d4ed8;
+      line-height:1.25;
+      margin-bottom:-7px;
+      white-space:normal;
+      word-break:keep-all;
     ">
       [리뷰탭- 방문자리뷰- 메뉴:대게- 최신순]
     </div>
 
-    <div style="
-      border-radius:10px;
-      overflow:hidden;
-      border:1px solid #e5e7eb;
-      background:#fff;
-      padding:6px;                 /* ✅ 좌측 카드 안쪽 여백 -> 이미지 체감 축소 */
-    ">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/review_teamleader.png?v=2"
-        style="
-          width:100%;              /* ✅ div 패딩 때문에 실제 표시가 줄어듦 */
-          height:auto;
-          display:block;
-        ">
-    </div>
-  </div>
-
-  <!-- RIGHT -->
-  <div>
-    <div style="
-      font-size:12px;
-      font-weight:700;
-      color:#334155;
-      margin-bottom:6px;
-      margin-top:2px;
-    ">
-      [사진탭- 내부버튼]
+    <!-- LEFT IMAGE -->
+    <div>
+      <div style="
+        border-radius:10px;
+        overflow:hidden;
+        border:1px solid #e5e7eb;
+        background:#fff;
+        padding:6px;
+      ">
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/review_teamleader.png?v=2"
+          style="width:100%;height:auto;display:block;">
+      </div>
     </div>
 
-    <div style="
-      border-radius:10px;
-      overflow:hidden;
-      border:1px solid #e5e7eb;
-      background:rgb(240, 243, 226);
-    ">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture5.png?v=2"
-        style="
-          width:100%;
-          height:auto;
-          display:block;
-        ">
-    </div>
-
-    <!-- 공유하기 -->
-    <div style="margin-top:12px;">
+    <!-- RIGHT CONTENT -->
+    <div style="margin-top:13px;">
       <div style="
         font-size:12px;
         font-weight:700;
-        color:#334155;
+        color:#1d4ed8;
         margin-bottom:6px;
+        margin-top:2px;
       ">
-        [공유하기-URL복사버튼]
+        [사진탭- 내부버튼]
       </div>
 
       <div style="
@@ -281,45 +252,55 @@
         border:1px solid #e5e7eb;
         background:rgb(240, 243, 226);
       ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/main/source_share.png?v=2"
-          style="
-            width:100%;
-            height:auto;
-            display:block;
-          ">
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/place_picture5.png?v=2"
+          style="width:100%;height:auto;display:block;">
+      </div>
+
+      <!-- 공유하기 -->
+      <div style="margin-top:12px;">
+        <div style="
+          font-size:12px;
+          font-weight:700;
+          color:#1d4ed8;
+          margin-bottom:6px;
+        ">
+          [공유하기-URL복사버튼]
+        </div>
+
+        <div style="
+          border-radius:10px;
+          overflow:hidden;
+          border:1px solid #e5e7eb;
+          background:rgb(240, 243, 226);
+        ">
+          <img src="https://raw.githubusercontent.com/unembabo/images/main/source_share.png?v=2"
+            style="width:100%;height:auto;display:block;">
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- FULL WIDTH (unchanged) -->
-  <div style="grid-column:1 / -1;">
-    <div style="font-size:12px;font-weight:700;color:#334155;margin-bottom:6px;">
-      [길찾기- 추천거리]
-    </div>
-    <div style="
-      border-radius:10px;
-      overflow:hidden;
-      border:1px solid #e5e7eb;
-      background:#fff;
-    ">
-      <img src="https://raw.githubusercontent.com/unembabo/images/main/cutting22.png?v=2"
-        style="
-          width:100%;
-          height:auto;
-          display:block;
-        ">
-    </div>
-  </div>
+    <!-- FULL WIDTH -->
+    <div style="grid-column:1 / -1;">
+      <div style="font-size:12px;font-weight:700;color:#1d4ed8;margin-bottom:6px;">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[길찾기- 추천거리]
+      </div>
 
+      <div style="
+        border-radius:10px;
+        overflow:hidden;
+        border:1px solid #e5e7eb;
+        background:#fff;
+        width:90%;
+        margin:0 auto;
+      ">
+        <img src="https://raw.githubusercontent.com/unembabo/images/main/cutting22.png?v=2"
+          style="width:100%;height:auto;display:block;">
+      </div>
+    </div>
+
+  </div>
 </div>
 
-
-
-
-
-
-
-</div>
 
   </div>
 </body>
