네이버미션

--- a/naver_map_mission.html
+++ b/naver_map_mission.html
@@ -73,7 +73,7 @@
       line-height: 22px;
       font-weight: bolder;
       letter-spacing: -0.3px;
-      color: rgb(0, 104, 195);
+      color: rgb(0, 0, 0);
       cursor: pointer;
       display: inline;
     }
@@ -129,17 +129,15 @@
            style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
     </div>
 
-    <!-- ✅ PASTE 이미지 -->
-    <div style="display:flex;justify-content:center;">
-      <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/navermap/PASTE2.png"
-           style="
-             max-width:250px;
-             width:100%;
-             height:auto;
-             border-radius:4px;
-             object-fit:contain;
-           " />
-    </div>
+<div style="display:flex;justify-content:right;">
+  <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/navermap/PASTE2_2.png"
+       style="
+         max-width:200px;
+         width:100%;
+         height:auto;
+         object-fit:contain;
+       " />
+</div>
 
   </div>
 </div>
@@ -151,23 +149,10 @@
       <div style="display:flex;gap:12px;align-items:center;margin-bottom:2.5px;">
         <div>
           <span class="targetText">엠치과의원 신암점</span>
-          <span style="font-size:10px; font-weight:500;color:#000000;">플레이스 클릭</span>
+          <span style="font-size:10px; font-weight:500;color:#000000;"> 클릭 (1~10위 이내 노출)</span>
         </div>
       </div>
 
-      <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
-        <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
-          <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
-        </span>
-        를 눌러주세요)
-      </div>
-
-
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin:0 0 4px auto;color:#1e40af;display:inline-flex;align-items:center;margin-left:8px; justify-content:center;gap:0px;">
-        <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/ad-teamreader.png" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
-      </div>
     </div>
 
     <!-- STEP 3 -->
