--- a/place_link.html
+++ b/place_link.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <img src='https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_d6ms6zd6ms6zd6ms.png'
+      <img src='https://raw.githubusercontent.com/goaldeer/imgShow/refs/heads/main/Gemini_Generated_Image_ms8f2jms8f2jms8f.png'
            alt='검색 예시'
            style='width:50%;height:auto;border-radius:14px;display:flex; margin: 0 auto;'>
     <div class="titleRow" style="display:flex;align-items:center;gap:12px;">
@@ -115,31 +115,13 @@
     <div class="step1-images"
          style="display:flex;align-items:center;gap:4px;flex-wrap:nowrap;min-width:0;">
 
-      <img src="findanswer/keywordpm5.png"
-           style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
-
-      <span style="font-size:10px;color:#334155;">클릭 후</span>
 
       <img src="findanswer/missionStart22.png"
            style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
 
-      <span style="font-size:10px;color:#334155;">클릭 후</span>
-
-      <img src="TEST2_cropped.png"
-           style="flex:0.6 1 0;min-width:0;height:auto;border-radius:4px;object-fit:contain;" />
+      <span style="font-size:13px;color:#334155;">클릭</span>
     </div>
 
-    <!-- ✅ PASTE 이미지 -->
-    <div style="display:flex;justify-content:center;">
-      <img src="PASTE2.png"
-           style="
-             max-width:250px;
-             width:100%;
-             height:auto;
-             border-radius:4px;
-             object-fit:contain;
-           " />
-    </div>
 
   </div>
 </div>
@@ -150,24 +132,33 @@
     <div class="card" style="background:#ffffff;border-radius:12px;padding:10px 10px;border:1px solid #e5e7eb;">
       <div style="display:flex;gap:12px;align-items:center;margin-bottom:2.5px;">
         <div>
-          <span class="targetText">엠치과의원 신암점</span>
-          <span style="font-size:10px; font-weight:500;color:#000000;">플레이스 클릭</span>
+          <span class="targetText">본문 내용 중 플레이스 지도 클릭</span>
         </div>
+    <div>
+      <div style="
+        border-radius:10px;
+        overflow:hidden;
+        border:1px solid #e5e7eb;
+        background:#fff;
+        padding:6px;
+      ">
+        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/review_teamleader.png"
+          style="width:100%;height:auto;display:block;">
+      </div>
+    </div>
+
+
+
+
+
+
+
+        
       </div>
 
-      <div style="font-size:10px;font-weight:400;color:#334155;margin-bottom:10px; ">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;(찾는 플레이스가 <span style="display:inline-flex;align-items:center;gap:4px; font-size: 12px;font-weight: bold;">보이지 않으면</span>
-        <span style="display:inline-flex;align-items:center;gap:4px;color:#2563eb;font-weight:800;">
-          <img src="findanswer/newMoreView.png" style="height:21px;width:auto;display:inline-block;vertical-align:baseline;position:relative;top:5.5px;">
-        </span>
-        를 눌러주세요)
-      </div>
 
 
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<div style="font-size:13px;background:#eff6ff;border:1px solid #bfdbfe;border-radius:8px;padding:2px 8px 3px;margin:0 0 4px auto;color:#1e40af;display:inline-flex;align-items:center;margin-left:8px; justify-content:center;gap:0px;">
-        <span style="font-size:13px; font-weight: 900;color:#1e40af;;">※</span>
-        <img src="findanswer/ad-teamreader.png" style="height:23px; width:auto;" /><span style="font-size:10px;font-weight:400;color:rgb(0, 0, 0);">플레이스를 클릭하면&nbsp;</span> <span style="font-size:10.7px; font-weight: 900;color:#dc2626;"> 정답오류 &nbsp;</span>
-      </div>
+
     </div>
 
     <!-- STEP 3 -->
