--- a/place_link.html
+++ b/place_link.html
@@ -127,39 +127,55 @@
 </div>
 
 
-    <!-- STEP 2 -->
-    <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">2</div>
-    <div class="card" style="background:#ffffff;border-radius:12px;padding:10px 10px;border:1px solid #e5e7eb;">
-      <div style="display:flex;gap:12px;align-items:center;margin-bottom:2.5px;">
-        <div>
-          <span class="targetText">본문 내용 중 플레이스 지도 클릭</span>
-        </div>
-    <div>
-      <div style="
-        border-radius:10px;
-        overflow:hidden;
-        border:1px solid #e5e7eb;
-        background:#fff;
-        padding:6px;
-      ">
-        <img src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/findanswer/review_teamleader.png"
-          style="width:100%;height:auto;display:block;">
-      </div>
-    </div>
+   
+<!-- STEP 2 -->
+<div style="
+  width:28px;
+  height:28px;
+  background:#1e293b;
+  color:#fff;
+  border-radius:8px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:14px;
+  font-weight:700;
+  margin-bottom:-10px;
+">2</div>
 
+<div class="card" style="
+  background:#ffffff;
+  border-radius:12px;
+  padding:16px;
+  border:1px solid #e5e7eb;
+">
 
+  <!-- STEP 2 텍스트 -->
+  <div style="
+    font-size:14px;
+    font-weight:700;
+    color:#1e293b;
+    margin-bottom:10px;
+  ">
+    <span class="targetText">본문 내용 중 추천 장소 지도 클릭</span>
+  </div>
 
+  <!-- STEP 2 이미지 (문구 아래) -->
+  <div style="
+    border-radius:10px;
+    overflow:hidden;
+    border:1px solid #e5e7eb;
+    background:#fff;
+    padding:6px;
+  ">
+    <img
+      src="https://raw.githubusercontent.com/unembabo/images/refs/heads/main/blogMission/map3.png"
+      alt="추천 장소 지도 예시"
+      style="width:100%;height:auto;display:block;"
+    >
+  </div>
 
-
-
-
-        
-      </div>
-
-
-
-
-    </div>
+</div>
 
     <!-- STEP 3 -->
     <div style="width:28px;height:28px;background:#1e293b;color:#fff;border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:14px;font-weight:700;margin-bottom:-10px;">3</div>
